# Zen

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/html/: ZEN__Application_8cpp_source.html  ZEN__Application_8h_source.html  ZEN__Buffer_8cpp_source.html  ZEN__Buffer_8h_source.html  ZEN__Core_8h_source.html  ZEN__EntryPoint_8h_source.html  ZEN__Events_8cpp_source.html  ZEN__Events_8h_source.html  ZEN__GraphicsContext_8cpp_source.html  ZEN__GraphicsContext_8h_source.html  ZEN__Image_8h_source.html  ZEN__LayerListPEREZ_8cpp_source.html  ZEN__LayerListPEREZ_8h_source.html  ZEN__LayerList_8cpp_source.html  ZEN__LayerList_8h_source.html  ZEN__Layer_8cpp_source.html  ZEN__Layer_8h_source.html  ZEN__LinuxWindow_8cpp_source.html  ZEN__LinuxWindow_8h_source.html  ZEN__Log_8cpp_source.html  ZEN__Log_8h_source.html  ZEN__OpenGLBuffer_8cpp_source.html  ZEN__OpenGLBuffer_8h_source.html  ZEN__OpenGLContext_8cpp_source.html  ZEN__OpenGLContext_8h_source.html  ZEN__OpenGLRendererAPI_8cpp_source.html  ZEN__OpenGLRendererAPI_8h_source.html  ZEN__OpenGLVertexArray_8cpp_source.html  ZEN__OpenGLVertexArray_8h_source.html  ZEN__RenderCommand_8cpp_source.html  ZEN__RenderCommand_8h_source.html  ZEN__RendererAPI_8cpp_source.html  ZEN__RendererAPI_8h_source.html  ZEN__Renderer_8cpp_source.html  ZEN__Renderer_8h_source.html  ZEN__Shader_8cpp_source.html  ZEN__Shader_8h_source.html  ZEN__Texture_8h_source.html  ZEN__Types_8h_source.html  ZEN__VertexArray_8cpp_source.html  (+106 more)
docs/latex/: ZEN__Application_8cpp_source.tex  ZEN__Application_8h_source.tex  ZEN__Buffer_8cpp_source.tex  ZEN__Buffer_8h_source.tex  ZEN__Core_8h_source.tex  ZEN__EntryPoint_8h_source.tex  ZEN__Events_8cpp_source.tex  ZEN__Events_8h_source.tex  ZEN__GraphicsContext_8cpp_source.tex  ZEN__GraphicsContext_8h_source.tex  ZEN__Image_8h_source.tex  ZEN__LayerListPEREZ_8cpp_source.tex  ZEN__LayerListPEREZ_8h_source.tex  (+83 more)
editor/: CMakeLists.txt
editor/data/: basic.frag  basic.vert  boiler.frag  boiler.vert
editor/src/: CMakeLists.txt  Zenith.cpp  main.cpp
engine/: CMakeLists.txt  zen.h
engine/base/: CMakeLists.txt  ZEN_Engine.cpp  ZEN_Engine.h  ZEN_GameManager.h  ZEN_Types.h  ZEN_Window.cpp  ZEN_Window.h  ZEN_WindowManager.h  window.h
engine/base/2d/: ZEN_GameObject2D.cpp  ZEN_GameObject2D.h  ZEN_Texture2D.cpp  ZEN_Texture2D.h
engine/base/2d/textures/: ZEN_Texture2D.cpp  ZEN_TextureFactory2D.cpp  ZEN_TextureFactory2D.h
engine/base/game/: ZEN_GameManager.cpp
engine/base/managers/: ZEN_GameManager.cpp  ZEN_GameManager.h  ZEN_ResourceManager.cpp  ZEN_ResourceManager.h  ZEN_WindowManager.cpp  ZEN_WindowManager.h
engine/base/managers/game/: ZEN_GameManager.cpp
engine/base/managers/logger/: ZEN_LoggerManager.cpp  ZEN_LoggerManager.h
engine/base/managers/resource/: ZEN_ResourceManager.cpp
engine/base/managers/window/: ZEN_WindowManager.cpp
engine/base/resource/: ZEN_ResourceManager.cpp  ZEN_ResourceManager.h
engine/base/window/: ZEN_WindowManager.cpp  ZEN_WindowManager.h
engine/render/: CMakeLists.txt  ZEN_Render.h  ZEN_Renderer2D.cpp  ZEN_Renderer2D.h
engine/renderer/: CMakeLists.txt  ZEN_2D.cpp  ZEN_2D.h  ZEN_GraphicsAPI.h  ZEN_OpenGL.h  ZEN_Renderer.h
engine/renderer/2d/: CMakeLists.txt  ZEN_2D.h  ZEN_2D_ResourceManager.h
engine/renderer/apis/: ZEN_GraphicsAPI.h  ZEN_OpenGL.cpp  ZEN_OpenGL.h
engine/types/: window_types.h
engine/zen/: CMakeLists.txt  ZEN_Engine.cpp  ZEN_Engine.h  ZEN_Types.h  zen.h  zen_pch.h
engine/zen/2d/: CMakeLists.txt  ZEN_GameObject2D.cpp  ZEN_GameObject2D.h  ZEN_Sprite.h  ZEN_Transform2D.h
engine/zen/core/: CMakeLists.txt  ZEN_Application.cpp  ZEN_Application.h  ZEN_Core.h  ZEN_EntryPoint.h  ZEN_SDL.h  ZEN_Window.cpp  ZEN_Window.h
engine/zen/events/: CMakeLists.txt  ZEN_Events.cpp  ZEN_Events.h
engine/zen/game/: CMakeLists.txt  ZEN_GameManager.cpp  ZEN_GameManager.h
engine/zen/layer/: CMakeLists.txt  ZEN_Layer.cpp  ZEN_Layer.h  ZEN_LayerList.cpp  ZEN_LayerList.h  ZEN_LayerListPEREZ.cpp  ZEN_LayerListPEREZ.h
engine/zen/log/: CMakeLists.txt  ZEN_Log.cpp  ZEN_Log.h
engine/zen/logger/: CMakeLists.txt  ZEN_Logger.cpp  ZEN_Logger.h  ZEN_LoggerManager.cpp  ZEN_LoggerManager.h
engine/zen/opengl/: ZEN_Batch.cpp  ZEN_Batch.h  ZEN_OpenGL.h  ZEN_Shader.cpp  ZEN_Shader.h
engine/zen/platform/: CMakeLists.txt
engine/zen/platform/OpenGL/: ZEN_OpenGLBuffer.cpp  ZEN_OpenGLBuffer.h  ZEN_OpenGLContext.cpp  ZEN_OpenGLContext.h  ZEN_OpenGLRendererAPI.cpp  ZEN_OpenGLRendererAPI.h  ZEN_OpenGLVertexArray.cpp  ZEN_OpenGLVertexArray.h
engine/zen/platform/linux/: ZEN_LinuxWindow.cpp  ZEN_LinuxWindow.h
engine/zen/render/: CMakeLists.txt  ZEN_GLShader.cpp  ZEN_GLShader.h  ZEN_GLShaderFactory.cpp  ZEN_GLShaderFactory.h  ZEN_Renderer.cpp  ZEN_Renderer.h  ZEN_Renderer2D.cpp  ZEN_Renderer2D.h
engine/zen/renderer/: CMakeLists.txt  ZEN_Buffer.cpp  ZEN_Buffer.h  ZEN_GraphicsContext.cpp  ZEN_GraphicsContext.h  ZEN_RenderAPI.cpp  ZEN_RenderAPI.h  ZEN_RenderCommand.cpp  ZEN_RenderCommand.h  ZEN_Renderer.cpp  ZEN_Renderer.h  ZEN_RendererAPI.cpp  ZEN_RendererAPI.h  ZEN_Shader.cpp  ZEN_Shader.h  ZEN_VertexArray.cpp  ZEN_VertexArray.h
engine/zen/resource/: CMakeLists.txt  ZEN_DoubleMap.h  ZEN_ResourceManager.cpp  ZEN_ResourceManager.h
engine/zen/textures/: CMakeLists.txt  ZEN_Image.h  ZEN_Texture.h  ZEN_Texture2D.cpp  ZEN_Texture2D.h  ZEN_TextureFactory2D.cpp  ZEN_TextureFactory2D.h
engine/zen/window/: CMakeLists.txt  ZEN_WindowManager.cpp  ZEN_WindowManager.h
include/imgui/: CMakeLists.txt  imgui.ini  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
include/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl3.h
include/imgui/demo/: imgui.ini  main.cpp
include/zen/engine/: CMakeLists.txt  engine.h
include/zen/engine/events/: event_manager.h
include/zen/engine/subsystems/: subsystem.h  window.cpp  window.h
include/zen/engine/systems/: render.h  window.cpp  window.h
include/zen/engine/types/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/engine/: engine.h
src/engine/events/: event_manager.cpp
src/engine/subsystems/: render.h  window.cpp  window.h
(+25 files in other folders)
